fixed login and navbar overlap

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -305,7 +305,8 @@ img.profile-picture {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 80vh;
+    height: auto;
+    padding-top: 100px;
     background-color: var(--dark-color);
 }
 
